--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 </head>
 
 <body>
-<header>
-    <nav class=" navbar navbar-dark bg-dark ">
-        <a href="#" class="navbar-brand">WorkOut!</a>
-        <ul class="navbar-nav">
-            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Link</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Disabled</a></li>
-        </ul>
-    <form class="d-flex">
-        <input type="search" class="form-control" placeholder="Search .....">
-        <button class="btn btn-outline-success">Search</button>
-    </form>
-</nav>
-</header>
+    <header>
+        <nav class=" navbar navbar-expand-md navbar-dark bg-dark  fixed-top">
+            <div class="container-fluid">
+                <div class="d-flex">
+                    <a href="#" class="navbar-brand">WorkOut!</a>
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link disabled">Admin</a></li>
+                    </ul>
+                </div>
+                <form class="d-flex">
+                    <input type="search" class="form-control me-2" placeholder="Search .....">
+                    <button class="btn btn-outline-success">Search</button>
+                </form>
+            </div>
+        </nav>
+    </header>
 
 
 
