--- a/index.html
+++ b/index.html
@@ -28,7 +28,49 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="carousel slide "  data-bs-ride="carousel" id="first-carousel">
+            <div class="carousel-indicators">
+                <button data-bs-target="#first-carousel" data-bs-slide-to="0" class="active"></button>
+                <button data-bs-target="#first-carousel" data-bs-slide-to="1"></button>
+                <button data-bs-target="#first-carousel" data-bs-slide-to="2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/bodybuilding.jpg" class="d-block w-100 " style="height: 560px;" alt="bodybuilder420">
+                    <div class="carousel-caption mb-5 text-start">
+                        <h1>THERE IS NO LIMIT</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, reiciendis qui! Iure minima vitae obcaecati labore harum quidem, repellendus incidunt excepturi, esse hic quos eum?</P>
+                        <button class="btn btn-lg btn-primary">Sign up today</button>
+                    </div>
+                </div>
+                <div class="carousel-item ">
+                    <img src="./img/workoutgirl.jpg" class="d-block w-100" style="height: 560px;" alt="girl-workout">
+                    <div class="carousel-caption mb-5">
+                        <h1>ANY ONE CAN WORKOUT</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta atque aliquam tempore eos accusamus autem sint, quasi fugit. Cumque cupiditate dolore earum minus modi? Hic, esse.</P>
+                        <button class="btn btn-lg btn-primary">Learn more</button>
+                    </div>
 
+                </div>
+                <div class="carousel-item ">
+                    <img src="./img/power.jpg" class="d-block w-100" style="height:560px ;" alt="power">
+                    <div class="carousel-caption mb-5 text-end">
+                        <h1>BECOME FEARLESS</h1>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolore similique deserunt accusamus blanditiis pariatur, deleniti aut laborum alias, exercitationem culpa sed quos!</P>
+                        <button class="btn btn-lg btn-primary">Brouse gallery</button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" data-bs-target="#first-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" data-bs-target="#first-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </button>
+        </div>
+
+    </main>
 
 
 
