first grid for introduction completed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <main>
-        <div class="carousel slide "  data-bs-ride="carousel" id="first-carousel">
+        <div class="carousel slide " data-bs-ride="carousel" id="first-carousel">
             <div class="carousel-indicators">
                 <button data-bs-target="#first-carousel" data-bs-slide-to="0" class="active"></button>
                 <button data-bs-target="#first-carousel" data-bs-slide-to="1"></button>
@@ -37,10 +37,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/bodybuilding.jpg" class="d-block w-100 " style="height: 560px;" alt="bodybuilder420">
+                    <img src="./img/bodybuilding.jpg" class="d-block w-100 " style="height: 560px;"
+                        alt="bodybuilder420">
                     <div class="carousel-caption mb-5 text-start">
                         <h1>THERE IS NO LIMIT</h1>
-                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, reiciendis qui! Iure minima vitae obcaecati labore harum quidem, repellendus incidunt excepturi, esse hic quos eum?</P>
+                        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, reiciendis qui! Iure
+                            minima vitae obcaecati labore harum quidem, repellendus incidunt excepturi, esse hic quos
+                            eum?</P>
                         <button class="btn btn-lg btn-primary">Sign up today</button>
                     </div>
                 </div>
@@ -48,7 +51,8 @@
                     <img src="./img/workoutgirl.jpg" class="d-block w-100" style="height: 560px;" alt="girl-workout">
                     <div class="carousel-caption mb-5">
                         <h1>ANY ONE CAN WORKOUT</h1>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta atque aliquam tempore eos accusamus autem sint, quasi fugit. Cumque cupiditate dolore earum minus modi? Hic, esse.</P>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta atque aliquam tempore eos
+                            accusamus autem sint, quasi fugit. Cumque cupiditate dolore earum minus modi? Hic, esse.</P>
                         <button class="btn btn-lg btn-primary">Learn more</button>
                     </div>
 
@@ -57,7 +61,9 @@
                     <img src="./img/power.jpg" class="d-block w-100" style="height:560px ;" alt="power">
                     <div class="carousel-caption mb-5 text-end">
                         <h1>BECOME FEARLESS</h1>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolore similique deserunt accusamus blanditiis pariatur, deleniti aut laborum alias, exercitationem culpa sed quos!</P>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolore similique deserunt
+                            accusamus blanditiis pariatur, deleniti aut laborum alias, exercitationem culpa sed quos!
+                        </P>
                         <button class="btn btn-lg btn-primary">Brouse gallery</button>
                     </div>
                 </div>
@@ -68,6 +74,31 @@
             <button class="carousel-control-next" data-bs-target="#first-carousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </button>
+        </div>
+        <div class="container my-5 ">
+            <div class="row text-center py-3 ">
+                <div class="col m-4">
+                    <img src="./img/face1.jpg" class="rounded-circle" alt="face-gal1">
+                    <h2>Maria</h2>
+                    <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, aperiam, vero qui in explicabo
+                        expedita rerum necessitatibus veniam aspernatur natus nventore ipsam quae quas. Magnam,
+                        doloremque provident. Veniam, ut.</P>
+                    <button class="btn btn-secondary">View details > </button>
+                </div>
+                <div class="col m-4">
+                    <img src="./img/face3.jpg" alt="man" class="rounded-circle">
+                    <h2>Hasmukh</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure accusantium dolorum temporibus aliquid ipsa excepturi nulla magni doloremque, rem dolore est ducimus hic porro adipisci illum, illo aut voluptas.</p>
+                    <button class="btn btn-secondary">View details ></button>
+                </div>
+                <div class="col m-4">
+                    <img src="./img/face2.jpg" alt="gal2" class="rounded-circle">
+                    <h2>Priyanka</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsa repellendus vel a, asperiores eius magnam ipsum laborum, optio, odit omnis corporis nulla edulla kanta. Aliquid doloremque praesentium molestiae.</p>
+                    <button class="btn btn-secondary">View details ></button>
+                </div>
+
+            </div>
         </div>
 
     </main>
