almost completed,nav dropdown remained

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
-        <div class="container my-5 ">
-            <div class="row text-center py-3 ">
-                <div class="col m-4">
+        <div class="container text-muted ">
+            <div class="row text-center mt-5 pb-5">
+                <div class="col-md-4 p-4">
                     <img src="./img/face1.jpg" class="rounded-circle" alt="face-gal1">
                     <h2>Maria</h2>
                     <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat, aperiam, vero qui in explicabo
@@ -85,24 +85,71 @@
                         doloremque provident. Veniam, ut.</P>
                     <button class="btn btn-secondary">View details > </button>
                 </div>
-                <div class="col m-4">
+                <div class="col-md-4 p-4">
                     <img src="./img/face3.jpg" alt="man" class="rounded-circle">
                     <h2>Hasmukh</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure accusantium dolorum temporibus aliquid ipsa excepturi nulla magni doloremque, rem dolore est ducimus hic porro adipisci illum, illo aut voluptas.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam iure accusantium dolorum
+                        temporibus aliquid ipsa excepturi nulla magni doloremque, rem dolore est ducimus hic porro
+                        adipisci illum, illo aut voluptas.</p>
                     <button class="btn btn-secondary">View details ></button>
                 </div>
-                <div class="col m-4">
+                <div class="col-md-4 p-4">
                     <img src="./img/face2.jpg" alt="gal2" class="rounded-circle">
                     <h2>Priyanka</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsa repellendus vel a, asperiores eius magnam ipsum laborum, optio, odit omnis corporis nulla edulla kanta. Aliquid doloremque praesentium molestiae.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam ipsa repellendus vel a,
+                        asperiores eius magnam ipsum laborum, optio, odit omnis corporis nulla edulla kanta. Aliquid
+                        doloremque praesentium molestiae.</p>
                     <button class="btn btn-secondary">View details ></button>
                 </div>
-
             </div>
+            <hr>
+            <div class="row align-items-center my-5 py-4">
+                <div class="col-md-7 ">
+                    <h1>Your first dumbblle is here. <br> It will blow your mind.</h1>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis doloribus
+                        praesentium. Adipisci nihil perferendis exercitationem maxime esse nam quibusdam earum incidunt,
+                        saepe illum accusantium quae odio! Eos, suscipit porro.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="./img/hrithik-roshan.jpg" style="width:370px; height:500px;" alt="first-box-image"
+                        class="image-fluid">
+                </div>
+            </div>
+            <hr>
+            <div class="row align-items-center my-5 py-4">
+                <div class="col-md-5">
+                    <img src="./img/group.jpg" style="width:370px; height:500px;" alt="first-box-image"
+                        class="image-fluid">
+                </div>
+                <div class="col-md-7 ">
+                    <h1 class="display-5">Oh yeah, it's that good. <br> See for yourself.</h1>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis doloribus
+                        praesentium. Adipisci nihil perferendis exercitationem maxime esse nam quibusdam earum incidunt,
+                        saepe illum accusantium quae odio! Eos, suscipit porro.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="row align-items-center my-5 py-4">
+                <div class="col-md-7 ">
+                    <h1>And lastly, this one. <br> Checkmate.</h1>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi quis doloribus
+                        praesentium. Adipisci nihil perferendis exercitationem maxime esse nam quibusdam earum incidunt,
+                        saepe illum accusantium quae odio! Eos, suscipit porro.</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="./img/workgal.jpg" style="width:370px; height:500px;" alt="first-box-image"
+                        class="image-fluid">
+                </div>
+            </div>
+            <hr>
         </div>
-
     </main>
-
+<footer class="container my-2 py-5">
+    <a href="#top" class="float-end foot-link" >Back to top</a>
+    <div>
+    <p>&copy 2022-2023 shekpa art pvt. ltd. <a href="#" >Privacy</a> <a href="#"> Terms</a>
+    </p></div>
+</footer>
 
 
 
