--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 
 <body>
     <header>
-        <nav class=" navbar navbar-expand-md navbar-dark bg-dark  fixed-top">
-            <div class="container-fluid">
-                <div class="d-flex">
-                    <a href="#" class="navbar-brand">WorkOut!</a>
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link disabled">Admin</a></li>
-                    </ul>
-                </div>
-                <form class="d-flex">
-                    <input type="search" class="form-control me-2" placeholder="Search .....">
-                    <button class="btn btn-outline-success">Search</button>
+        <nav class=" navbar navbar-expand-md navbar-dark bg-dark fixed-top py-2 px-3 ">
+            <a href="#" class="navbar-brand ">WorkOut!</a>
+            <button class="navbar-toggler" data-bs-target="#collapseNavbar" data-bs-toggle="collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse  d-md-flex justify-content-between" id="collapseNavbar">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item"><a href="#" class="nav-link active">Home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link disabled">Admin</a></li>
+                </ul>
+                <form class="form d-md-flex mt-2 mt-md-0">
+                    <input type="search" class="form-control me-2 mr-sm-2" placeholder="Search .....">
+                    <button class="btn btn-outline-success my-2 my-sm-0 ">Search</button>
                 </form>
             </div>
         </nav>
@@ -144,15 +145,13 @@
             <hr>
         </div>
     </main>
-<footer class="container my-2 py-5">
-    <a href="#top" class="float-end foot-link" >Back to top</a>
-    <div>
-    <p>&copy 2022-2023 shekpa art pvt. ltd. <a href="#" >Privacy</a> <a href="#"> Terms</a>
-    </p></div>
-</footer>
-
-
-
+    <footer class="container my-2 py-5">
+        <a href="#top" class="float-end foot-link">Back to top</a>
+        <div>
+            <p>&copy 2022-2023 shekpa art pvt. ltd. <a href="#">Privacy</a> <a href="#"> Terms</a>
+            </p>
+        </div>
+    </footer>
 
 
 
