--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project06_Workout</title>
+    <link rel="shortcut icon" href="./favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./favicon_io/apple-touch-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <title>Workout - Get In, Get Fit..</title>
 </head>
 
 <body>
@@ -38,7 +40,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/bodybuilding.jpg" class="d-block w-100 " style="height: 560px;"
+                    <img src="./img/power.jpg" class="d-block w-100 " style="height: 560px;"
                         alt="bodybuilder420">
                     <div class="carousel-caption mb-5 text-start">
                         <h1>THERE IS NO LIMIT</h1>
@@ -59,7 +61,7 @@
 
                 </div>
                 <div class="carousel-item ">
-                    <img src="./img/power.jpg" class="d-block w-100" style="height:560px ;" alt="power">
+                    <img src="./img/bodybuilding.jpg" class="d-block w-100" style="height:560px ;" alt="power">
                     <div class="carousel-caption mb-5 text-end">
                         <h1>BECOME FEARLESS</h1>
                         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolore similique deserunt
@@ -113,14 +115,14 @@
                 </div>
                 <div class="col-md-5">
                     <img src="./img/hrithik-roshan.jpg" style="width:370px; height:500px;" alt="first-box-image"
-                        class="image-fluid">
+                        class="img-fluid ">
                 </div>
             </div>
             <hr>
             <div class="row align-items-center my-5 py-4">
                 <div class="col-md-5">
                     <img src="./img/group.jpg" style="width:370px; height:500px;" alt="first-box-image"
-                        class="image-fluid">
+                        class="img-fluid">
                 </div>
                 <div class="col-md-7 ">
                     <h1 class="display-5">Oh yeah, it's that good. <br> See for yourself.</h1>
@@ -138,8 +140,8 @@
                         saepe illum accusantium quae odio! Eos, suscipit porro.</p>
                 </div>
                 <div class="col-md-5">
-                    <img src="./img/workgal.jpg" style="width:370px; height:500px;" alt="first-box-image"
-                        class="image-fluid">
+                    <img src="./img/workgal.jpg" style="width:370px; height:500px" alt="first-box-image"
+                        class="img-fluid ">
                 </div>
             </div>
             <hr>
